--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -5,18 +5,25 @@
   padding: 8.1285px;
   gap: 5.42px;
   background: #ffffff;
-  box-shadow:
+  /*box-shadow:
     0px 1px 2px rgba(0, 0, 0, 0.14),
-    0px 0px 2px rgba(0, 0, 0, 0.12);
+    0px 0px 2px rgba(0, 0, 0, 0.12); */
   border-radius: 5.419px;
 }
 
 .answerText {
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 20px;
-  color: #323130;
+  font-family:
+    'Roboto',
+    -apple-system,
+    BlinkMacSystemFont,
+    Roboto,
+    'Helvetica Neue',
+    sans-serif;
+    font-size: 14px;
+  line-height: 22px;
+  color: #242424;
   flex: none;
   order: 1;
   align-self: stretch;
@@ -51,7 +58,7 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
-
+  margin-left: 11px;
   display: flex;
   align-items: center;
   text-align: center;
