--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -5,9 +5,9 @@
   right: 0%;
   top: 0%;
   bottom: 0%;
-  background: #ffffff;
+  background: #EDF1F2;
   box-shadow:
-    0px 8px 16px rgba(0, 0, 0, 0.14),
+    0px 4px 10px rgba(0, 0, 0, 0.14),
     0px 0px 2px rgba(0, 0, 0, 0.12);
   border-radius: 8px;
 }
@@ -46,7 +46,7 @@
   height: 4px;
   left: 0%;
   bottom: 0%;
-  background: radial-gradient(106.04% 106.06% at 100.1% 90.19%, #0f6cbd 33.63%, #8dddd8 100%);
+  background: linear-gradient(90deg, #00AF42 0%, #006D90 100%);
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
 }
