--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -20,10 +20,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: radial-gradient(108.78% 108.78% at 50.02% 19.78%, #ffffff 57.29%, #eef6fe 100%);
+  /*background: radial-gradient(108.78% 108.78% at 50.02% 19.78%, #ffffff 57.29%, #eef6fe 100%);
   box-shadow:
     0px 2px 4px rgba(0, 0, 0, 0.14),
-    0px 0px 2px rgba(0, 0, 0, 0.12);
+    0px 0px 2px rgba(0, 0, 0, 0.12);*/
   border-radius: 8px;
   overflow-y: auto;
   max-height: calc(100vh - 100px);
@@ -35,35 +35,46 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
+  padding-left: 65px;
+  max-width: 1028px;
 }
 
 .chatEmptyStateTitle {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
+  font-size: 42px;
   display: flex;
   align-items: flex-end;
   text-align: center;
-  line-height: 24px;
-  margin-top: 36px;
-  margin-bottom: 0px;
+  /*line-height: 24px;*/
+  margin-top: 16px;
+  margin-bottom: 0px;  
+  color: transparent;
+  background: linear-gradient(90deg, rgba(0, 45, 119, 80%) 0%, rgba(0, 174, 64, 80%) 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
 }
 
 .chatEmptyStateSubtitle {
-  margin-top: 20px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
+  margin-top: 0px;
+  font-size: 32px;
+  /*line-height: 150%;*/
   align-items: flex-end;
   text-align: center;
-  letter-spacing: -0.01em;
-  color: #616161;
+  color: transparent;
+  background: linear-gradient(90deg, rgba(0, 45, 119, 80%) 0%, rgba(0, 174, 64, 80%) 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
 }
 
 .chatIcon {
   height: 62px;
   width: auto;
+}
+
+.chatGPIcon {
+  height: 42px;
+  width: auto;
+  margin-bottom: 30px;
 }
 
 .chatMessageStream {
@@ -87,11 +98,11 @@
 .chatMessageUserMessage {
   display: flex;
   padding: 20px;
-  background: #edf5fd;
+  background: #DBE5F4;
   border-radius: 8px;
-  box-shadow:
+  /*box-shadow:
     0px 2px 4px rgba(0, 0, 0, 0.14),
-    0px 0px 2px rgba(0, 0, 0, 0.12);
+    0px 0px 2px rgba(0, 0, 0, 0.12);*/
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -199,6 +210,7 @@
 
 .stopGeneratingContainer {
   box-sizing: border-box;
+  cursor: pointer;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -224,8 +236,8 @@
   width: 103px;
   height: 20px;
   font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
+  font-weight: 500;
+  font-size: 12px;
   line-height: 20px;
   display: flex;
   align-items: center;
